--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-browserstack-local
 jsonmerge
 selenium==4.*
 psutil
-pytest==7.4.4
+pytest==8.4.2
 pytest-variables
 pytest-selenium
-browserstack-sdk
-pytest-html==3.2.0
+browserstack-sdk==1.33.1
+pytest-html
