--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 jsonmerge
 selenium==4.*
 psutil
-pytest==8.4.2
+pytest==7.4.4
 pytest-variables
 pytest-selenium
-browserstack-sdk==1.33.1
-pytest-html
+browserstack-sdk
+pytest-html==3.2.0
