pytest cleanup changes

--- a/browserstack.yml
+++ b/browserstack.yml
@@ -1,7 +1,7 @@
 userName: $BROWSERSTACK_USERNAME
 accessKey: $BROWSERSTACK_ACCESS_KEY
 framework: pytest
-browserstackLocal: true
+browserstackLocal: ${BROWSERSTACK_LOCAL}
 buildName: ${BROWSERSTACK_BUILD_NAME}
 source: ${BROWSERSTACK_BUILD_NAME}
 projectName: ${BROWSERSTACK_PROJECT_NAME}
@@ -20,4 +20,23 @@ accessibilityOptions:
         experimental: false # Default: true
         advanced: false
 parallelsPerPlatform: ${BSTACK_PARALLELS}
+platforms:
+  - osVersion: Windows
+    browserName: Chrome
+    browserVersion: latest-1
 
+  - osVersion: Windows
+    browserName: Firefox
+    browserVersion: latest-2
+
+  - osVersion: Windows
+    browserName: Edge
+    browserVersion: latest
+
+  - osVersion: Windows
+    browserName: Chrome
+    browserVersion: latest-1
+
+  - osVersion: Windows
+    browserName: Chrome
+    browserVersion: latest-2
