pytest cleanup changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 browserstack-local
 jsonmerge
-selenium==4.*
+selenium<4.10
 psutil
 pytest==7.4.4
 pytest-variables
 pytest-selenium
-browserstack-sdk
+browserstack-sdk==1.31.0
 pytest-html==3.2.0
