--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-browserstack-local
 jsonmerge
-selenium<4.10
+selenium==4.9.1
 psutil
-pytest==7.4.4
-pytest-variables
-pytest-selenium
+
+# pytest + plugins compatible with 3.13
+pytest==9.0.1
+pytest-variables>=3.1.0
+pytest-selenium>=4.0.0
+pytest-html>=4.1.1
+pytest-metadata>=3.1.1
+
+# BrowserStack
 browserstack-sdk==1.31.0
-pytest-html==3.2.0
