--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+grpcio==0.0.0
 jsonmerge
 selenium==4.10.0
 psutil
@@ -9,4 +10,4 @@ pytest-html==4.1.1
 pytest-metadata==3.1.1
 
 browserstack-sdk==1.31.0
-py==1.11.0
+pytest-xdist
