--- a/browserstack.yml
+++ b/browserstack.yml
@@ -2,6 +2,9 @@ userName: $BROWSERSTACK_USERNAME
 accessKey: $BROWSERSTACK_ACCESS_KEY
 framework: pytest
 browserstackLocal: ${BROWSERSTACK_LOCAL}
+browserStackLocalOptions:
+  localIdentifier: 'browserstack-now-local'
+  force: true
 buildName: ${BROWSERSTACK_BUILD_NAME}
 buildIdentifier: ${BROWSERSTACK_BUILD_NAME}
 source: ${BROWSERSTACK_BUILD_NAME}
